--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
     "@depository/promise-middleware": "^0.9.6",
     "@depository/status-middleware": "^0.9.6",
     "@depository/store": "^0.9.6",
+    "canvas-confetti": "^1.3.2",
     "htm": "^3.0.4",
     "preact": "^10.5.7",
     "stylewars": "^1.6.1"
