--- a/package.json
+++ b/package.json
@@ -5,40 +5,34 @@
   "main": "src/index.js",
   "private": true,
   "scripts": {
-    "test": "mocha",
-    "start": "wmr",
-    "build": "rm -rf dist && wmr build"
+    "start": "relivestyle --port 5000 public",
+    "build": "rm -rf dist && rollup -c node:@depository/rollup-config",
+    "deploy": "yarn build && surge dist depository-english-spell.surge.sh"
   },
   "dependencies": {
-    "@depository/preact": "^0.9.6",
-    "@depository/promise-middleware": "^0.9.6",
-    "@depository/status-middleware": "^0.9.6",
-    "@depository/store": "^0.9.6",
+    "@depository/promise-middleware": "^0.46.0",
+    "@depository/status-middleware": "^0.46.0",
+    "@depository/store": "^0.46.0",
+    "@depository/view": "^0.46.0",
     "canvas-confetti": "^1.3.2",
     "htm": "^3.0.4",
-    "preact": "^10.5.7",
     "stylewars": "^1.6.1"
   },
   "devDependencies": {
-    "@babel/core": "^7.12.10",
+    "@depository/rollup-config": "^0.46.0",
     "eslint": "6.8.0",
     "eslint-config-prettier": "^6.0.0",
     "eslint-config-standard": "^14.1.1",
     "eslint-plugin-import": "^2.14.0",
-    "eslint-plugin-mocha": "^5.2.0",
+    "eslint-plugin-mocha": "^9.0.0",
     "eslint-plugin-node": "^11.1.0",
     "eslint-plugin-promise": "^4.0.1",
-    "eslint-plugin-react": "^7.21.5",
+    "eslint-plugin-react": "^7.25.1",
     "eslint-plugin-react-hooks": "^4.2.0",
     "eslint-plugin-standard": "^4.0.0",
-    "@rollup/plugin-babel": "^5.2.2",
-    "babel-plugin-htm": "^3.0.0",
-    "esm": "^3.2.25",
-    "mocha": "^8.2.1",
     "prettier": "^2.2.1",
-    "rollup": "^2.35.1",
-    "rollup-plugin-html-minifier": "^1.1.0",
-    "unexpected": "^12.0.0",
-    "wmr": "^1.0.0"
+    "relivestyle": "^1.0.0-9",
+    "rollup": "^2.39.0",
+    "surge": "^0.23.0"
   }
 }
